# gibby

./: .gitignore  README.md  pyproject.toml
gibby/: __main__.py  dotgibby.py  errors.py  file_tree.py  git.py  logic.py  remote_url.py  snapshot_behavior.py  state.py
gibby/cli/: __main__.py  _utils.py  snapshot.py
gibby/remote_url/: __init__.py  file_remote_url.py  remote_url.py
tests/: test_file_tree.py
