[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gibby"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
    "typer~=0.9.0",
    "pydantic>=2.6.3,<3"
]

[project.optional-dependencies]
all = [
    "typer[all]~=0.9.0"
]
dev = [
    "ruff>=0.3.1,<1"
]

[project.scripts]
gibby = "gibby.__main__:app"

[tool.ruff]
line-length = 120
target-version = "py39"


[tool.ruff.lint]
select = ["E1", "E4", "E7", "E9", "F", "I", "N", "W", "D417", "UP", "YTT"]

